use gray instead of purple for emoji highlighting focus on first result (since right arrow no longer navigates to the first result) align emoji better in focus boxes convert tabs to spaces in a sass file

--- a/src/app_ui/emoji_picker.css
+++ b/src/app_ui/emoji_picker.css
@@ -38,7 +38,6 @@ input {
 
 .results {
   padding: 0.5rem 1rem;
-  padding-bottom: 2px;
   overflow-y: auto; }
   .results button {
     background: transparent;
@@ -48,11 +47,14 @@ input {
     margin: 0;
     height: 100%;
     width: 100%;
-    font-size: 24px; }
+    font-size: 1.5rem;
+    padding-left: 1px;
+    padding-top: 1px; }
     .results button:focus {
       outline: none;
       border-radius: 2px;
-      box-shadow: 0 0 0 2px #AA8DD8; }
+      box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.3);
+      background: rgba(0, 0, 0, 0.1); }
   .results ol {
     list-style: none;
     display: grid;
@@ -60,6 +62,9 @@ input {
     grid-auto-rows: 2rem; }
   .results li {
     text-align: center; }
+
+.search:focus + .results li:first-of-type button {
+  background: rgba(0, 0, 0, 0.1); }
 
 output {
   margin-top: 0;
@@ -74,7 +79,7 @@ output {
 .pseudo-clipboard {
   opacity: 0.4;
   margin: 10px;
-  font-size: 24px;
+  font-size: 1.5rem;
   border: none; }
   .pseudo-clipboard:focus {
     opacity: 1; }
