--- a/src/site/site.css
+++ b/src/site/site.css
@@ -1,42 +1,54 @@
 body {
   background: #222;
   color: white;
-  line-height: 1.3; }
+  line-height: 1.3;
+}
 
 .appContainer {
   margin: 0 auto;
-  max-width: 400px; }
+  max-width: 400px;
+}
 
 h1 {
   text-align: center;
   font-weight: 300;
   color: #ccc;
-  margin: 1rem 0;
-  font-size: 2rem; }
+  font-size: 2rem;
+}
 
 .emoji-picker {
   margin: 0 auto;
   border-radius: 3px;
-  box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.4);
-  background: whitesmoke; }
+  -webkit-box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.4);
+          box-shadow: 0 0 0 10px rgba(0, 0, 0, 0.4);
+  background: whitesmoke;
+}
 
 .emoji-details, .emoji-picker {
   max-width: 400px;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 footer {
   font-size: smaller;
   color: gray;
   text-align: center;
-  margin: 40px 0; }
-  footer a {
-    color: gray; }
+}
+
+footer a {
+  color: gray;
+}
+
+h1, footer {
+  margin: 1rem 0;
+}
 
 dt {
-  margin-top: 0.5rem; }
+  margin-top: 0.5rem;
+}
 
 .highlight {
   background: rgba(255, 250, 130, 0.8);
-  color: black; }
-
+  color: black;
+}
 /*# sourceMappingURL=site.css.map */
